BLZT-27 add java docs and tests